--- a/server_config.yaml
+++ b/server_config.yaml
@@ -11,5 +11,4 @@ databaseDSN: "postgres://postgres:qwe123@localhost:5432/gophkeeper_dev?sslmode=d
 
 # Server configuration
 server:
-  host: "localhost"
-  port: "3000"
+  port: ":3000"
